apps/overlays/development/signconnect/google-cred-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signconnect-backend
spec:
  template:
    spec:
      containers:
      - name: backend
